# azwork

./: .gitignore  CLAUDE.md  README.md  demo.tape  mkdocs.yml  pyproject.toml
.claude/skills/commit/: SKILL.md
.github/workflows/: publish.yml
azwork/: __init__.py  __main__.py  config.py  demo.py  utils.py
azwork/api/: client.py  models.py  wiql.py
azwork/export/: markdown.py  prompt.py
azwork/tui/: app.py
azwork/tui/screens/: detail_screen.py  list_screen.py
azwork/tui/widgets/: filter_bar.py  item_table.py
docs/: getting-started.md  index.md  usage.md
tests/: test_api_client.py  test_export_markdown.py  test_html_conversion.py  test_wiql.py
tests/fixtures/: sample_wiql_response.json  sample_workitem_response.json
